# Trace-ExamSecurityOperations

./: .deployment  .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  DEPLOYMENT.md  README.md  Trace_Demo_Script.docx  Trace_Project_Documentation.docx  docker-compose.yml  netlify.toml
backend/: Dockerfile  pyproject.toml  railway.json  requirements.txt  start.sh
backend/cli/: api_demo.py  crypto_demo.py  watermark_demo.py
backend/tests/: conftest.py  test_aes_gcm.py  test_api.py  test_api_watermark.py  test_assembly.py  test_audit_chain.py  test_cases.py  test_gf256.py  test_leakmatch.py  test_shamir.py  test_watermark.py
backend/trace/: __init__.py  bootstrap.py  config.py  db.py  models.py  schemas.py  util.py
backend/trace/api/: __init__.py  app.py
backend/trace/api/routers/: audit_routes.py  auth.py  exams.py  investigator.py  questions.py
backend/trace/audit/: __init__.py  chain.py
backend/trace/crypto/: __init__.py  aes_gcm.py  gf256.py  shamir.py
backend/trace/security/: __init__.py  deps.py  keywrap.py  passwords.py  tokens.py
backend/trace/services/: __init__.py  assembly.py  cases.py  exams.py  leakmatch.py  watermarking.py
backend/trace/watermark/: __init__.py  core.py  render.py  trace.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js  hooks.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: CountdownTimer.jsx  (+7 more)
sample_data/: sample_paper.txt
scripts/: build_demo_doc.py  build_docs.py
(+4 files in other folders)
