[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-exam-security"
version = "0.1.0"
description = "Trace — leak-proof, traceable exam paper distribution"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["trace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
